photo grid fixed on small devices

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -82,15 +82,20 @@ a[href^="mailto:"]
   font-size: 1em;
 }
 
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
 
-/******************************* Pseudo Classes **********************************/
+/******************************* Pseudo Classes ************************/
 a[href^="mailto:"]:hover {
     color:dimgrey;
 }
 
 .social-icon:hover {
-    width: 30px;
-    height: 30px;
+    width: 32px;
+    height: 32px;
     top: -1px;
     left: -1px;
     background-color: #BDBDBD;
@@ -103,5 +108,6 @@ a[href^="mailto:"]:hover {
   body {
     padding-top: 60px;
 /*    padding-bottom: 42px;*/
+      
   }
 }
